service-playtech.yml
apiVersion: v1
kind: Service
metadata:
  name: playtech
spec: 
  selector:
    app: playtech
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 31223  
    protocol: TCP
