playtech-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: playtech-ingress
spec:
  backend:
    serviceName: playtech
    servicePort: 80
